# lodepng

./: CMakeLists.txt  flake.nix
cmake/: lodepngConfig.cmake.in
